--- a/apps/matricula/templates/home/index.html
+++ b/apps/matricula/templates/home/index.html
@@ -6,6 +6,6 @@
 
 {% block content %}
     {% include "home/header.html" %}
-    <p>escrbir aqui</p>
+    <p>Bienvenido al sitio web del Instituto de Sistemas Cusco ISC-UNSAAC.</p>
     {% include "home/footer.html" %}
 {% endblock content %}
