--- a/apps/matricula/templates/alumno/agregar.html
+++ b/apps/matricula/templates/alumno/agregar.html
@@ -4,10 +4,10 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'matricula_app:home' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'asistencia_app:panel_aula' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Crear Carrera Profesional</h5>    
+                <h5>Crear una nuevo Alumno</h5>    
             </div>
         </div>
 
@@ -27,29 +27,29 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.pk}}
-                                    {{ form.pk.label_tag }}
+                                    {{ form.nro_aula }}
+                                    {{ form.nro_aula.label_tag }}
                                 </div>
                             </div>
                             
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.nombre }}
-                                    {{ form.nombre.label_tag }}
+                                    {{ form.piso }}
+                                    {{ form.piso.label_tag }}
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.siglas_aula }}
-                                    {{ form.siglas.label_tag }}
+                                    {{ form.tipo_aula }}
+                                    {{ form.tipo_aula.label_tag }}
                                 </div>
                             </div>
                             
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.titulo }}
-                                    {{ form.titulo.label_tag }}
+                                    {{ form.capacidad }}
+                                    {{ form.capacidad.label_tag }}
                                 </div>
                             </div>
 
