--- a/apps/matricula/templates/home/header.html
+++ b/apps/matricula/templates/home/header.html
@@ -8,6 +8,7 @@
         <li><a href="{% url 'matricula_app:inicio' %}">Inicio</a></li>
         <li><a href="#">Misión & Visión</a></li>
         <li><a href="#">Contactenos</a></li>
+        <li><a href="{% url 'matricula_app:pre_matricula' %}">Pre Matricula</a></li>
         <li>
           {% if not user.is_authenticated %}
             <a href="{% url 'users_app:login' %}">Iniciar Sesión</a>
