cambio e models matricula

--- a/apps/matricula/templates/carrera/agregar.html
+++ b/apps/matricula/templates/carrera/agregar.html
@@ -4,7 +4,7 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'matricula_app:home' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'matricula_app:home_carrera' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
                 <h5>Crear Carrera Profesional</h5>    
@@ -24,13 +24,6 @@
                 <div class="card-panel">
                     <div class="row">
                         <form class="col s12" method="POST">{% csrf_token %}
-
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    {{ form.pk}}
-                                    {{ form.pk.label_tag }}
-                                </div>
-                            </div>
                             
                             <div class="row">
                                 <div class="input-field col s12">
@@ -41,7 +34,7 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.siglas_aula }}
+                                    {{ form.siglas }}
                                     {{ form.siglas.label_tag }}
                                 </div>
                             </div>
