--- a/apps/matricula/templates/Programacion/eliminar.html
+++ b/apps/matricula/templates/Programacion/eliminar.html
@@ -4,7 +4,7 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s12">
-                <h5>Eliminando: carrera {{ carrera }}</h5>    
+                <h5>Eliminar: Programacion {{ programacion }}</h5>    
             </div>
         </div>
 
@@ -14,13 +14,13 @@
             <div class="col s12 m6 offset-m3">
                 <div class="card-panel grey lighten-5 z-depth-1">
                     <div class="row valign-wrapper">
-                        <form action="{% url 'matricula_app:eliminar_carrera' carrera.pk %}" method="POST">{% csrf_token %}
+                        <form action="{% url 'matricula_app:eliminar_programacion' programacion.pk %}" method="POST">{% csrf_token %}
                             <div class="col s12">
-                                <h6 class="center-align">¿Desea eliminar la carrera "{{ carrera }}"?</h6>
+                                <h6 class="center-align">¿Desea eliminar esta programacion "{{ programacion }}"?</h6>
                             </div>
                             <div class="col s12 center">
                                 <button class="waves-effect waves-light btn btn-panel red" type="submit" name="action">si</button>
-                                <a href="{% url 'matricula_app:home_carrera' %}" class="waves-effect waves-light btn panel-btn white black-text">no</a>
+                                <a href="{% url 'matricula_app:home_programacion' %}" class="waves-effect waves-light btn panel-btn white black-text">no</a>
                             </div>
                         </form>                        
                     </div>
