--- a/apps/matricula/templates/Programacion/modificar.html
+++ b/apps/matricula/templates/Programacion/modificar.html
@@ -4,10 +4,10 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'matricula_app:home_carrera' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'matricula_app:home_programacion' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Modificando: carrera {{ carrera }}</h5>    
+                <h5>Modificando: Programacion {{ programacion }}</h5>    
             </div>
         </div>
 
@@ -23,26 +23,40 @@
             <div class="col s12 m6 l6">
                 <div class="card-panel">
                     <div class="row">
-                        <form class="col s12" action="{% url 'matricula_app:modificar_carrera' carrera.pk %}" method="POST">{% csrf_token %}
+                        <form class="col s12" action="{% url 'matricula_app:modificar_programacion' programacion.pk %}" method="POST">{% csrf_token %}
                             
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.nombre }}
-                                    {{ form.nombre.label_tag }}
+                                    {{ form.vacantes }}
+                                    {{ form.vacantes.label_tag }}
                                 </div>
                             </div>
                             
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.siglas }}
-                                    {{ form.siglas.label_tag }}
+                                    {{ form.inicio }}
+                                    {{ form.inicio.label_tag }}
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.titulo }}
-                                    {{ form.titulo.label_tag }}
+                                    {{ form.fin }}
+                                    {{ form.fin.label_tag }}
+                                </div>
+                            </div>
+                            
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ form.semestre }}
+                                    {{ form.semestre.label_tag }}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ form.finalizado }}
+                                    {{ form.finalizado.label_tag }}
                                 </div>
                             </div>
 
