--- a/apps/matricula/templates/carrera/detalle.html
+++ b/apps/matricula/templates/carrera/detalle.html
@@ -4,10 +4,10 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'asistencia_app:panel_aula' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'matricula_app:home_carrera' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Alumno: {{ alumno }} detalle</h5>    
+                <h5>carrera: {{ carrera }} detalle</h5>    
             </div>
         </div>
 
@@ -19,23 +19,17 @@
                     <div class="row">
                         <ul class="collection">
                             <li class="collection-item">
-                                <span class="title">first_name:</span>
-                                <p>{{ alumno.nombres }}</p>
+                                <span class="title">Nombre:</span>
+                                <p>{{ carrera.nombre }}</p>
                             </li>
                             <li class="collection-item">
-                                <span class="title">last_name:</span>
-                                <p>{{ alumno.apellidos }}</p>
+                                <span class="title">Siglas:</span>
+                                <p>{{ carrera.siglas}}</p>
                             </li>
                             <li class="collection-item">
-                                <span class="title">  email:</span>
-                                <p>{{ aula.get_tipo_aula_display }}</p>
+                                <span class="title">  Titulo:</span>
+                                <p>{{ carrera.titulo }}</p>
                             </li>
-                            <li class="collection-item">
-                                <span class="title">
-                                    address:</span>
-                                <p>{{ aula.capacidad }}</p>
-                            </li>
-
                         </ul> <!-- fin de collection -->
                     </div>
 
