--- a/apps/notas/templates/mantenimientos/asignatura/agregar_asignatura.html
+++ b/apps/notas/templates/mantenimientos/asignatura/agregar_asignatura.html
@@ -37,30 +37,23 @@
                                     {{ form.nombre }}
                                     {{ form.nombre.label_tag }}
                                 </div>
-                            </div>
-
-
-                            
+                            </div>                            
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.creditos }}
-                                    {{ form.creditos.label_tag }}
+                                    {{ form.categoria }}
+                                    {{ form.categoria.label_tag }}
                                 </div>
                             </div>
-
-
-
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.horas_teoricas }}
-                                    {{ form.horas_teoricas.label_tag }}
+                                    {{ form.horas_teorica }}
+                                    {{ form.horas_teorica.label_tag }}
                                 </div>
                             </div>
-
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.horas_practicas }}
-                                    {{ form.horas_practicas.label_tag }}
+                                    {{ form.horas_practica }}
+                                    {{ form.horas_practica.label_tag }}
                                 </div>
                             </div>
 
