--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -12,7 +12,7 @@
                     <ul>
                         <li><a href="{% url 'asistencia_app:panel_docente' %}">Docentes</a></li>
                         <li><a href="#">Admistrativos</a></li>
-                        <li><a href="#">Asignatura</a></li>
+                        <li><a href="{% url 'notas_app:panel_asignatura' %}">Asignatura</a></li>
                         <li><a href="{% url 'matricula_app:home_carrera' %}">Carreras Profesionales</a></li>
                         <li><a href="#">Modulos</a></li>
                         <li class="divider"></li>
