--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -12,7 +12,7 @@
                     <ul>
                         <li><a href="{% url 'asistencia_app:panel_docente' %}">Docentes</a></li>
                         <li><a href="#">Admistrativos</a></li>
-                        <li><a href="{% url 'notas_app:panel_asignatura' %}">Asignatura</a></li>
+                        <li><a href="{% url 'notas_app:panel_asignatura' %}">Asignaturas</a></li>
                         <li><a href="{% url 'matricula_app:home_carrera' %}">Carreras Profesionales</a></li>
                         <li><a href="#">Modulos</a></li>
                         <li class="divider"></li>
@@ -20,8 +20,8 @@
                         <li><a href="{% url 'asistencia_app:panel_aula' %}">Aulas</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="{% url 'pagos_app:panel_descuento' %}">descuentos</a></li>
-                        <li><a href="{% url 'pagos_app:panel_estructurapagos' %}">estructura de pagos</a></li>
+                        <li><a href="{% url 'pagos_app:panel_descuento' %}">Descuentos</a></li>
+                        <li><a href="{% url 'pagos_app:panel_estructurapagos' %}">Estructura de pagos</a></li>
                     </ul>
                 </div>
             </li>
