--- a/apps/notas/templates/mantenimientos/modulo/agregar_modulo.html
+++ b/apps/notas/templates/mantenimientos/modulo/agregar_modulo.html
@@ -4,10 +4,10 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'notas_app:panel_asignatura' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'notas_app:panel_modulo' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Crear una nueva Asignatura</h5>    
+                <h5>Crear nuevo Modulo</h5>    
             </div>
         </div>
 
@@ -27,33 +27,26 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.codigo }}
-                                    {{ form.codigo.label_tag }}
-                                </div>
-                            </div>
-                            
-                            <div class="row">
-                                <div class="input-field col s12">
                                     {{ form.nombre }}
                                     {{ form.nombre.label_tag }}
                                 </div>
                             </div>                            
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.categoria }}
-                                    {{ form.categoria.label_tag }}
+                                    {{ form.carrera }}
+                                    {{ form.carrera.label_tag }}
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.horas_teorica }}
-                                    {{ form.horas_teorica.label_tag }}
+                                    {{ form.asignatura }}
+                                    {{ form.asignatura.label_tag }}
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.horas_practica }}
-                                    {{ form.horas_practica.label_tag }}
+                                    {{ form.costo }}
+                                    {{ form.costo.label_tag }}
                                 </div>
                             </div>
 
