--- a/apps/notas/templates/mantenimientos/modulo/detalle_modulo.html
+++ b/apps/notas/templates/mantenimientos/modulo/detalle_modulo.html
@@ -4,10 +4,10 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'notas_app:panel_asignatura' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'notas_app:panel_modulo' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Asignatura: {{ asignatura }} detalle</h5>    
+                <h5>Modulo: {{ modulo }} detalle</h5>    
             </div>
         </div>
 
@@ -19,26 +19,21 @@
                     <div class="row">
                         <ul class="collection">
                             <li class="collection-item">
-                                <span class="title">Codigo:</span>
-                                <p>{{ asignatura.codigo }}</p>
+                                <span class="title">Nombre:</span>
+                                <p>{{ modulo.nombre }}</p>
                             </li>
                             <li class="collection-item">
-                                <span class="title">Asignatura:</span>
-                                <p>{{ asignatura.nombre }}</p>
+                                <span class="title">Carrera
+                                <p>{{ modulo.carrera }}</p>
                             </li>
                             <li class="collection-item">
-                                <span class="title">Categoria:</span>
-                                <p>{{ asignatura.categoria }}</p>
+                                <span class="title">Cursos:</span>
+                                <p>{{ modulo.asignatura }}</p>
                             </li>
                             <li class="collection-item">
-                                <span class="title">Horas Teoricas:</span>
-                                <p>{{ asignatura.horas_teorica }}</p>
-                            </li>
-                            <li class="collection-item">
-                                <span class="title">Horas Practicas:</span>
-                                <p>{{ asignatura.horas_practica }}</p>
-                            </li>
-
+                                <span class="title">Costo:</span>
+                                <p>{{ modulo.costo }}</p>
+                            </li>  
                         </ul> <!-- fin de collection -->
                     </div>
 
