--- a/apps/notas/templates/mantenimientos/modulo/modificar_modulo.html
+++ b/apps/notas/templates/mantenimientos/modulo/modificar_modulo.html
@@ -4,10 +4,10 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'notas_app:panel_asignatura' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'notas_app:panel_modulo' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Modificando: asignatura {{ asignatura }}</h5>    
+                <h5>Modificando: modulo {{ modulo }}</h5>    
             </div>
         </div>
 
@@ -23,14 +23,8 @@
             <div class="col s12 m6 l6">
                 <div class="card-panel">
                     <div class="row">
-                        <form class="col s12" action="{% url 'notas_app:modificar_asignatura' asignatura.pk %}" method="POST">{% csrf_token %}
-                            
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    {{ form.codigo }}
-                                    {{ form.codigo.label_tag }}
-                                </div>
-                            </div>
+                        <form class="col s12" action="{% url 'notas_app:modificar_modulo' modulo.pk %}" method="POST">{% csrf_token %}
+                               
                             
                             <div class="row">
                                 <div class="input-field col s12">
@@ -41,22 +35,22 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.categoria }}
-                                    {{ form.categoria.label_tag }}
+                                    {{ form.carrera }}
+                                    {{ form.carrera.label_tag }}
                                 </div>
                             </div>
                             
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.horas_teorica }}
-                                    {{ form.horas_teorica.label_tag }}
+                                    {{ form.asignatura }}
+                                    {{ form.asignatura.label_tag }}
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    {{ form.horas_practica }}
-                                    {{ form.horas_practica.label_tag }}
+                                    {{ form.costo }}
+                                    {{ form.costo.label_tag }}
                                 </div>
                             </div>
 
