--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -14,7 +14,7 @@
                         <li><a href="#">Admistrativos</a></li>
                         <li><a href="{% url 'notas_app:panel_asignatura' %}">Asignaturas</a></li>
                         <li><a href="{% url 'matricula_app:home_carrera' %}">Carreras Profesionales</a></li>
-                        <li><a href="#">Modulos</a></li>
+                        <li><a href="{% url 'notas_app:panel_modulo' %}">Modulos</a></li>
                         <li class="divider"></li>
                         <li><a href="{% url 'asistencia_app:panel_horario' %}">Horarios</a></li>
                         <li><a href="{% url 'asistencia_app:panel_aula' %}">Aulas</a>
