--- a/apps/asistencia/templates/asistencia/asistencia_docente.html
+++ b/apps/asistencia/templates/asistencia/asistencia_docente.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>asitnecia docnete</title>
-</head>
-<body>
-    <form method="POST">{% csrf_token %}
-        {{ form }}
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Guardar alumno</button>
+{% extends "users/base_users.html" %}
+{% load staticfiles %}
+
+{% block tittle %} asistencia docentes del instituto de sistemas{% endblock tittle %}
+
+{% block content %}
+    <div class="row">
+        <div class="col s3">
+            <form method="POST">{% csrf_token %}
+                {{ form }}
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">ragistrar</button>
+                </div>
+            </form>
         </div>
-    </form>
-</body>
-</html>
+        <div class="col s8">
+            
+        </div>
+    </div>
+{% endblock content %}
