--- a/apps/matricula/templates/home/index.html
+++ b/apps/matricula/templates/home/index.html
@@ -17,18 +17,18 @@
                        <img class="activator" src="{{ asignatura.imagen.url }}">
                     </div>
                     <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">{{ asignatura.nombre }}<i class="label-icons right">more_vert</i></span>
-                      <p><a href="#">Inscribirse</a></p>
+                      <span class="card-title activator grey-text text-darken-4">{{ asignatura.nombre }}<i class="mdi-navigation-more-vert right"></i></span>
+                      <p><a href="{% url 'cursolibre_app:matricula_cursolibre' asignatura.pk %}">Inscribirse</a></p>
                     </div>
                     <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">{{ asignatura.nombre }}<i class="comment right"></i></span>
+                      <span class="card-title grey-text text-darken-4">{{ asignatura.nombre }}<i class="mdi-navigation-close right"></i></span>
                       <p>{{ asignatura.descripcion|truncatewords:25 }}</p>
                     </div>
                 </div>
             </div>                    
         {% endfor %}
+    {% endfor %}
         </div>
     </div>
-    {% endfor %}
     {% include "home/footer.html" %}
 {% endblock content %}
